   192.168.1.0/24 + 192.168.2.0/24 made 192.168.1.0/23
 * Fix adding with an IPv6 address where .int() was < 32 bits made IPy believe it
  was an IPv4 address:
  ::ffff:0/112 + ::1:0:0/112 made 255.255.0.0/111
 * Add support of IPSets
 * Add support for subtracting a network range
 * Prevent IPv4 and IPv6 ranges from saying they contain each other


Version 0.76 (2013-03-19)
-------------------------

 * ip == other and ip != other doesn't fail with an exception anymore if other
  is not a IP object
 * Add IP.get_mac() method: get the 802.3 MAC address from IPv6 RFC 2464
  address.
 * Fix IP('::/0')[0]: return an IPv6 instead of an IPv4 address

Version 0.75 (2011-04-12)
-------------------------

 * IP('::/0').netmask() gives IP('::') instead of IP('0.0.0.0')

Version 0.74 (2011-02-16)
-------------------------

 * Fix tests for Python 3.1 and 3.2
 * ip.__nonzero__() and (ipa in ipb) return a bool instead of 0 or 1
 * IP('0.0.0.0/0') + IP('0.0.0.0/0') raises an error, fix written by Arfrever

Version 0.73 (2011-02-15)
-------------------------

 * Support Python 3: setup.py runs 2to3
 * Update the ranges for IPv6 IPs
 * Fix reverseName() and reverseNames() for IPv4 in IPv6 addresses
 * Drop support of Python < 2.5

Version 0.72 (2010-11-23)
-------------------------

 * Include examples and MANIFEST.in in source build (add them to
   MANIFEST.in)
 * Remove __rcsid__ constant from IPy module

Version 0.71 (2010-10-01)
-------------------------

 * Use xrange() instead of range()
 * Use isinstance(x, int) instead of type(x) == types.IntType
 * Prepare support of Python3 (use integer division: x // y)
 * Fix IP(long) constructor: ensure that the address is not too large
 * Constructor raise a TypeError if the type is not int, long,
   str or unicode
 * 223.0.0.0/8 is now public (belongs to APNIC)

Version 0.70 (2009-10-29)
-------------------------

 * New "major" version because it may break compatibility